# mcp

./: README.md  pyproject.toml  server.py
.github/workflows/: ping.yml
.ipynb_checkpoints/: pyproject-checkpoint.toml  requirements-checkpoint.txt  server-checkpoint.py
finance_crawler_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
